--- a/ciet_pmu/templates/home.html
+++ b/ciet_pmu/templates/home.html
@@ -1,11 +1,15 @@
+{% load static tailwind_tags %}
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
+    <link rel="stylesheet" href="{% static "theme/css/style.css" %}">
+    {% tailwind_css %}
 </head>
-<body>
-    Home
+<body class="bg-purple-300">
+    <div class="text-9xl text-center m-2">Home</div>
 </body>
 </html>
