--- a/ciet_pmu/templates/home/home.html
+++ b/ciet_pmu/templates/home/home.html
@@ -189,9 +189,9 @@
     </div>
     <div class="space-x-8">
       <a href="#" class="text-gray-600 hover:text-purple-700 transition-colors duration-300">Home</a>
-      <a href="#" class="text-gray-600 hover:text-purple-700 transition-colors duration-300">Features</a>
-      <a href="#" class="text-gray-600 hover:text-purple-700 transition-colors duration-300">Pricing</a>
-      <a href="#" class="text-gray-600 hover:text-purple-700 transition-colors duration-300">Testimonials</a>
+      <a href="#" class="text-gray-600 hover:text-purple-700 transition-colors duration-300">Units</a>
+      <a href="#" class="text-gray-600 hover:text-purple-700 transition-colors duration-300">Announcements</a>
+      <a href="#" class="text-gray-600 hover:text-purple-700 transition-colors duration-300">FAQs</a>
     </div>
     <div class="space-x-4">
       <a href="{% url 'login' %}"  class="text-white bg-purple-600 hover:bg-purple-700 px-6 py-2 rounded-full transition-colors duration-300">Login</a>
@@ -202,7 +202,7 @@
     <div class="absolute top-0 right-0 w-1/3 h-1/2 bg-purple-300 transform rotate-45 opacity-50 z-0 transition-all duration-1000"></div>
     <div class="absolute top-1/4 right-0 w-1/4 h-1/3 bg-pink-300 transform rotate-30 opacity-50 z-0 transition-all duration-1000"></div>
     <div class="w-1/3 justify-center items-center animate__fadeInUp animation-duration-1s">
-      <h1 class="text-5xl font-bold text-gray-900 mb-4 transition-all duration-500 hover:text-purple-700">Hisaab yaha Hai(CIET Chit Fund)</h1>
+      <h1 class="text-5xl font-bold text-gray-900 mb-4 transition-all duration-500 hover:text-purple-700">CIET PMU</h1>
       <p class="text-lg text-gray-600 mb-6 leading-relaxed">This PMU (Project Management Unit) portal is created with the objectives to ensure the effective monitoring of programmes, updating of the progress of programmes, and quick retrieval of essential information. It shall provide information on the PAC/PAB approved projects carried out by the Constituent Units of NCERT.</p>
       <button class=  "bg-purple-600 text-white px-8 py-3 rounded-lg hover:bg-purple-700 transition-all duration-300 transform hover:scale-105">Signup</button>
     </div>
