--- a/ciet_pmu/templates/home/home.html
+++ b/ciet_pmu/templates/home/home.html
@@ -53,8 +53,7 @@
     </div>
   </nav>
   <div class="relative overflow-hidden">
-    <div class="absolute top-0 right-0 w-1/3 h-1/2 bg-indigo-200 transform rotate-45 opacity-40 z-0 transition-all duration-1000"></div>
-    <div class="absolute top-1/4 right-0 w-1/4 h-1/3 bg-indigo-100 transform rotate-30 opacity-40 z-0 transition-all duration-1000"></div>
+    
     <div class="container mx-auto flex items-center justify-between px-12 py-16 relative z-10">
       <div class="w-1/2 animate-fadeInUp">
         <h1 class="text-5xl font-extrabold text-gray-900 mb-6 leading-tight transition-all duration-500 hover:text-indigo-700">CIET PMU</h1>
@@ -99,6 +98,20 @@
         <h4 class="text-xl font-semibold text-gray-800 mb-3">Smart Notifications</h4>
         <p class="text-gray-600 mb-4 leading-relaxed">Stay informed with real-time notifications tailored to your project milestones.</p>
         <a href="#" class="text-indigo-600 font-medium hover:underline transition-colors duration-300">Learn More</a>
+      </div>
+    </div>
+  </section>
+  <section class="py-20 bg-white">
+    <div class="container mx-auto px-12 flex items-center justify-between">
+      <div class="w-1/2 relative">
+        
+        <img src="{% static 'images/home_page_images/payment_transfer.jpg' %}" alt="Payment Transfer" class="relative z-10 w-full h-auto rounded-lg shadow-lg">
+      </div>
+      <div class="w-1/2 text-left pl-12">
+        <p class="text-sm font-semibold text-indigo-500 mb-4">Admin Panel</p>
+        <h2 class="text-4xl font-bold text-gray-900 mb-6">Funds Management Made Easy<br>Saves You Time</h2>
+        <p class="text-gray-600 mb-6">Schedule programs effortlessly, manage programs in real time with programs coordinator.</p>
+        <a href="#" class="text-indigo-500 font-medium hover:underline">Admin</a>
       </div>
     </div>
   </section>
