--- a/ciet_pmu/templates/home/home.html
+++ b/ciet_pmu/templates/home/home.html
@@ -111,7 +111,7 @@
         <p class="text-sm font-semibold text-indigo-500 mb-4">Admin Panel</p>
         <h2 class="text-4xl font-bold text-gray-900 mb-6">Funds Management Made Easy<br>Saves You Time</h2>
         <p class="text-gray-600 mb-6">Schedule programs effortlessly, manage programs in real time with programs coordinator.</p>
-        <a href="#" class="text-indigo-500 font-medium hover:underline">Admin</a>
+        <a href="{% url "admin_login" %}" class="text-indigo-500 font-medium hover:underline">Admin</a>
       </div>
     </div>
   </section>
