pull latest code

--- a/ciet_pmu/user_dashboard/templates/user_dashboard/user_dashboard.html
+++ b/ciet_pmu/user_dashboard/templates/user_dashboard/user_dashboard.html
@@ -6,6 +6,9 @@
     <title>User Dashboard</title>
 </head>
 <body>
+
+    {% include "partials/navbar.html" %}
+
     <h1 class="bg-purple-500 text-white">User Login Hogya</h1>
 </body>
 </html>
