--- a/ciet_pmu/admin_dashboard/templates/admin_dashboard/projects.html
+++ b/ciet_pmu/admin_dashboard/templates/admin_dashboard/projects.html
@@ -8,13 +8,17 @@
     {% tailwind_css %}
 </head>
 <body>
-    <section id="projects" class="section fade-in">
+
+  <div class="flex h-screen">
+    {% include "partials/admin_sidebar.html" %}
+    <section id="projects" class="section fade-in w-full ml-[20%] p-6 overflow-auto">
         <h2 class="text-2xl font-bold mb-4">Projects</h2>
         <div class="bg-white p-4 rounded-lg shadow">
           <h3 class="text-lg font-semibold">Active Projects</h3>
           <p class="text-gray-600">List of ongoing projects will be displayed here.</p>
         </div>
       </section>
+  </div>
     
 </body>
 </html>
