--- a/ciet_pmu/user_dashboard/templates/user_dashboard/user_dashboard.html
+++ b/ciet_pmu/user_dashboard/templates/user_dashboard/user_dashboard.html
@@ -182,6 +182,7 @@
                 <div class="mt-6 flex justify-between">
                     <button id="prev-4" class="px-4 py-2 bg-gray-200 rounded-lg">Previous</button>
                     {% comment %} <button id="next-5" class="px-4 py-2 bg-purple-600 text-white rounded-lg disabled:opacity-50" disabled>Next</button> {% endcomment %}
+                    <button id="submit" class="px-4 py-2 bg-purple-600 text-white rounded-lg">Submit</button>
                 </div>
             </div>
             </div>
