--- a/ciet_pmu/admin_dashboard/templates/admin_dashboard/projects.html
+++ b/ciet_pmu/admin_dashboard/templates/admin_dashboard/projects.html
@@ -30,7 +30,7 @@
                         <select id="program-coordinator" name="program_coordinator" class="w-full p-2 border rounded focus:outline-none focus:ring-2 focus:ring-blue-500 transition duration-200" required>
                             <option value="">Select Coordinator</option>
                             {% for user in user %}
-                                <option value="{{ coordinator.id }}">{{ coordinator.name }}</option>
+                                <option value="{{ user.id }}">{{ user.name }}</option>
                             {% endfor %}
                         </select>
                         <span class="error-message text-red-500 text-sm hidden">Please select a coordinator</span>
