add entries to frontend from db

--- a/ciet_pmu/admin_dashboard/templates/admin_dashboard/projects.html
+++ b/ciet_pmu/admin_dashboard/templates/admin_dashboard/projects.html
@@ -116,7 +116,7 @@
       </div>
     </div>
 
-    <script>
+    {% comment %} <script>
       document.addEventListener("DOMContentLoaded", () => {
         const form = document.getElementById("form");
         const submitButton = document.getElementById("submit");
@@ -160,6 +160,6 @@
         // Initial validation
         validateForm();
       });
-    </script>
+    </script> {% endcomment %}
   </body>
 </html>
