--- a/ciet_pmu/signup/templates/signup/signup.html
+++ b/ciet_pmu/signup/templates/signup/signup.html
@@ -1,28 +1,16 @@
-{% load static %} {% load static tailwind_tags %}
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CIET PMU - Signup</title>
-    {% tailwind_css %}
-  </head>
+{% extends "layout.html" %}
+{% load static %}
 
-  <body class="bg-gray-50 font-sans text-gray-800 animate-fade-in-up">
-    
-    {% include "partials/navbar.html" %}
 
+{% block title %}
+  CIET PMU - Signup
+{% endblock %}
+
+{% block content %}
+  {% include "partials/navbar.html" %}
     <div
       class="flex items-center justify-center min-h-screen p-12 relative z-10"
     >
-      {% comment %}
-      <div
-        class="absolute top-0 right-0 w-1/3 h-1/2 bg-purple-300 transform rotate-45 opacity-50 z-0 transition-all duration-1000"
-      ></div>
-      <div
-        class="absolute top-1/4 right-0 w-1/4 h-1/3 bg-pink-300 transform rotate-30 opacity-50 z-0 transition-all duration-1000"
-      ></div>
-      {% endcomment %}
       <div
         class="w-full max-w-md bg-white p-8 rounded-xl shadow-2xl animate-slide-in-up"
       >
@@ -137,5 +125,4 @@
         </p>
       </div>
     </div>
-  </body>
-</html>
+{% endblock %}
