--- a/ciet_pmu/templates/home/home.html
+++ b/ciet_pmu/templates/home/home.html
@@ -1,42 +1,11 @@
-{% load static tailwind_tags %} {% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CIET PMU</title>
-  {% tailwind_css %}
-  <style>
-    @keyframes fadeInUp {
-      from {
-        opacity: 0;
-        transform: translateY(20px);
-      }
-      to {
-        opacity: 1;
-        transform: translateY(0);
-      }
-    }
-    @keyframes scaleIn {
-      from {
-        opacity: 0;
-        transform: scale(0.95);
-      }
-      to {
-        opacity: 1;
-        transform: scale(1);
-      }
-    }
-    .animate-fadeInUp {
-      animation: fadeInUp 0.8s ease-out forwards;
-    }
-    .animate-scaleIn {
-      animation: scaleIn 0.6s ease-out forwards;
-    }
-  </style>
-</head>
-<body class="bg-gray-100 font-sans text-gray-900 antialiased">
-  
+{% extends "layout.html" %}
+{% load static %}
+
+{% block title %}
+CIET PMU - Home
+{% endblock %}
+
+{% block content %}
   {% include "partials/navbar.html" %}
   
   <div class="relative overflow-hidden">  
@@ -101,5 +70,4 @@
       </div>
     </div>
   </section>
-</body>
-</html>
+{% endblock %}
