add footer and FAQ

--- a/ciet_pmu/templates/layout.html
+++ b/ciet_pmu/templates/layout.html
@@ -11,5 +11,8 @@
 </head>
 <body class="bg-gray-100 font-sans text-gray-900 antialiased"> 
     {% block content %}{% endblock %}
+
+    {% include 'partials/footer.html' %}
+    
 </body>
 </html>
