--- a/ciet_pmu/user_dashboard/templates/user_dashboard/user_dashboard.html
+++ b/ciet_pmu/user_dashboard/templates/user_dashboard/user_dashboard.html
@@ -80,7 +80,7 @@
     <p class="text-gray-500">No programs assigned to you yet.</p>
     {% endif %}
 
-    <form method="POST" id="form-step-2" class="step hidden">
+    {% comment %} <form method="POST" id="form-step-2" class="step hidden">
       <h2 class="text-xl font-semibold text-gray-800 mb-4">KPI Details</h2>
       <p class="text-gray-600 mb-6">Enter KPI Information.</p>
       <div id="kpi-fields" class="space-y-4">
@@ -375,7 +375,7 @@
           </button>
         </div>
       </div>
-    </div>
+    </div> {% endcomment %}
   </div>
 </div>
 
